# velxio

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile.standalone  FASE2_COMPLETE.md  FASE3_COMPLETE.md  README.md  SETUP_COMPLETE.md  docker-compose.prod.yml  docker-compose.yml  fancy-splashing-shannon.md  start-backend.bat  test_esp32_emulation.py
.github/: FUNDING.yml
.github/workflows/: backend-e2e-tests.yml  docker-publish.yml  frontend-tests.yml  main.yml
backend/: Dockerfile  requirements.txt  test_esp32_i2c_slaves.py
backend/app/: main.py
backend/app/services/esp-idf-template/main/: CMakeLists.txt  velxio_compat.h
backend/tests/: test_esp32_wifi.py  test_esp32_wifi_webserver.py  test_esp32c3_wifi.py
deploy/: entrypoint.sh
doc/: ARCHITECTURE.md  WOKWI_LIBS.md
docs/: PICO_W_WIFI_EMULATION.md  RISCV_EMULATION.md  THIRD_PARTY.md  getting-started.md  intro.md
docs/wiki/: circuit-emulation-adc-aliasing.md  circuit-emulation-esp32-qemu.md  epaper-emulation.md  esp32-cache-disable-runtime-crash.md  picow-cyw43-emulation.md
examples/: README.md
examples/esp32-cam-lcd-preview/: README.md  diagram.json  esp32-cam-lcd-preview.ino  esp32-cam-lcd-status.ino  libraries.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: components-metadata.json  sitemap.xml
frontend/scripts/: translate-i18n.mjs
frontend/src/: App.css  App.tsx  index.css  main.tsx  seoRoutes.ts  vite-env.d.ts
scripts/: component-overrides.json  generate-component-metadata.ts  generate-example-screenshots.md
test/test_intel/: 00_README.md
(+235 files in other folders)
